[project]
name = "Anon_bot"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "~=3.9"
authors = [
    {name = "AceKashiwa", email = "payoung@zju.edu.cn"},
]
dependencies = ["nonebot-adapter-onebot>=2.4.6", "nonebot2[fastapi]>=2.4.1", "nonebot2[httpx]>=2.4.1", "nonebot2[websockets]>=2.4.1"]
license = {text = "MIT"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.pdm]
distribution = false
